--- a/Meeting #19 - Promeses and Fetch/Codigos/Tarea/package.json
+++ b/Meeting #19 - Promeses and Fetch/Codigos/Tarea/package.json
@@ -2,13 +2,14 @@
   "name": "challenge-11",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.9"
